--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,6 +33,10 @@
   <footer class="main" id="f1">
     <a href="http://es.wikipedia.org/wiki/Quiz">
       ¿Que es un Quiz?</a>
+    <br/>
+    <a href="https://github.com/tabai/quiz-tabai">
+      Proyecto en GITHUB</a>
+    
   </footer>
 </div>
 </body> 
