--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,5 +1,10 @@
-  <table>
+  <form method="get" action="/quizes">        
+  	A buscar: <input type="text" name="search" value="<%= texto %>"/>
+  	<input type="submit" value="Buscar">
+</form>
+
+<table>
   <% var i; for (i=0; i < quizes.length; i++) { %>        
-     <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
+     <tr><td align="left"><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
   <% } %>
-  </table>
+</table>
